docs/v0.2.0a58/_sources/reference/_autosummary/hpcflow.sdk.persistence.json.JSONPersistentStore.rst.txt
hpcflow.sdk.persistence.json.JSONPersistentStore
================================================

.. currentmodule:: hpcflow.sdk.persistence.json

.. autoclass:: JSONPersistentStore
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~JSONPersistentStore.add_EAR
      ~JSONPersistentStore.add_element
      ~JSONPersistentStore.add_element_iteration
      ~JSONPersistentStore.add_element_set
      ~JSONPersistentStore.add_file
      ~JSONPersistentStore.add_loop
      ~JSONPersistentStore.add_set_parameter
      ~JSONPersistentStore.add_submission
      ~JSONPersistentStore.add_submission_attempt
      ~JSONPersistentStore.add_task
      ~JSONPersistentStore.add_template_components
      ~JSONPersistentStore.add_unset_parameter
      ~JSONPersistentStore.cached_load
      ~JSONPersistentStore.check_parameters_exist
      ~JSONPersistentStore.copy
      ~JSONPersistentStore.delete
      ~JSONPersistentStore.delete_no_confirm
      ~JSONPersistentStore.get_EAR_skipped
      ~JSONPersistentStore.get_EARs
      ~JSONPersistentStore.get_creation_info
      ~JSONPersistentStore.get_element_iterations
      ~JSONPersistentStore.get_elements
      ~JSONPersistentStore.get_fs_path
      ~JSONPersistentStore.get_loops
      ~JSONPersistentStore.get_loops_by_IDs
      ~JSONPersistentStore.get_parameter_set_statuses
      ~JSONPersistentStore.get_parameter_sources
      ~JSONPersistentStore.get_parameters
      ~JSONPersistentStore.get_submissions
      ~JSONPersistentStore.get_submissions_by_ID
      ~JSONPersistentStore.get_task
      ~JSONPersistentStore.get_task_elements
      ~JSONPersistentStore.get_tasks
      ~JSONPersistentStore.get_tasks_by_IDs
      ~JSONPersistentStore.get_template
      ~JSONPersistentStore.get_template_components
      ~JSONPersistentStore.make_test_store_from_spec
      ~JSONPersistentStore.prepare_test_store_from_spec
      ~JSONPersistentStore.reinstate_replaced_dir
      ~JSONPersistentStore.remove_path
      ~JSONPersistentStore.remove_replaced_dir
      ~JSONPersistentStore.rename_path
      ~JSONPersistentStore.save
      ~JSONPersistentStore.set_EAR_end
      ~JSONPersistentStore.set_EAR_skip
      ~JSONPersistentStore.set_EAR_start
      ~JSONPersistentStore.set_EAR_submission_index
      ~JSONPersistentStore.set_file
      ~JSONPersistentStore.set_jobscript_job_ID
      ~JSONPersistentStore.set_jobscript_submit_time
      ~JSONPersistentStore.set_jobscript_version_info
      ~JSONPersistentStore.set_parameter_value
      ~JSONPersistentStore.update_loop_num_iters
      ~JSONPersistentStore.update_param_source
      ~JSONPersistentStore.using_resource
      ~JSONPersistentStore.write_empty_workflow
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~JSONPersistentStore.has_pending
      ~JSONPersistentStore.logger
      ~JSONPersistentStore.ts_fmt
   
   