docs/v0.2.0a178/_sources/reference/_autosummary/hpcflow.sdk.persistence.json.JSONPersistentStore.rst.txt
hpcflow.sdk.persistence.json.JSONPersistentStore
================================================

.. currentmodule:: hpcflow.sdk.persistence.json

.. autoclass:: JSONPersistentStore
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~JSONPersistentStore.add_EAR
      ~JSONPersistentStore.add_element
      ~JSONPersistentStore.add_element_iteration
      ~JSONPersistentStore.add_element_set
      ~JSONPersistentStore.add_file
      ~JSONPersistentStore.add_loop
      ~JSONPersistentStore.add_set_parameter
      ~JSONPersistentStore.add_submission
      ~JSONPersistentStore.add_submission_part
      ~JSONPersistentStore.add_task
      ~JSONPersistentStore.add_template_components
      ~JSONPersistentStore.add_unset_parameter
      ~JSONPersistentStore.cache_ctx
      ~JSONPersistentStore.cached_load
      ~JSONPersistentStore.check_parameters_exist
      ~JSONPersistentStore.copy
      ~JSONPersistentStore.delete
      ~JSONPersistentStore.delete_no_confirm
      ~JSONPersistentStore.get_EAR_skipped
      ~JSONPersistentStore.get_EARs
      ~JSONPersistentStore.get_creation_info
      ~JSONPersistentStore.get_element_iterations
      ~JSONPersistentStore.get_elements
      ~JSONPersistentStore.get_loops
      ~JSONPersistentStore.get_loops_by_IDs
      ~JSONPersistentStore.get_name
      ~JSONPersistentStore.get_parameter_set_statuses
      ~JSONPersistentStore.get_parameter_sources
      ~JSONPersistentStore.get_parameters
      ~JSONPersistentStore.get_submissions
      ~JSONPersistentStore.get_submissions_by_ID
      ~JSONPersistentStore.get_task
      ~JSONPersistentStore.get_task_elements
      ~JSONPersistentStore.get_tasks
      ~JSONPersistentStore.get_tasks_by_IDs
      ~JSONPersistentStore.get_template
      ~JSONPersistentStore.get_template_components
      ~JSONPersistentStore.get_ts_fmt
      ~JSONPersistentStore.get_ts_name_fmt
      ~JSONPersistentStore.make_test_store_from_spec
      ~JSONPersistentStore.prepare_test_store_from_spec
      ~JSONPersistentStore.reinstate_replaced_dir
      ~JSONPersistentStore.remove_path
      ~JSONPersistentStore.remove_replaced_dir
      ~JSONPersistentStore.rename_path
      ~JSONPersistentStore.save
      ~JSONPersistentStore.set_EAR_end
      ~JSONPersistentStore.set_EAR_skip
      ~JSONPersistentStore.set_EAR_start
      ~JSONPersistentStore.set_EAR_submission_index
      ~JSONPersistentStore.set_EARs_initialised
      ~JSONPersistentStore.set_file
      ~JSONPersistentStore.set_jobscript_metadata
      ~JSONPersistentStore.set_parameter_value
      ~JSONPersistentStore.update_loop_num_iters
      ~JSONPersistentStore.update_loop_parents
      ~JSONPersistentStore.update_param_source
      ~JSONPersistentStore.using_resource
      ~JSONPersistentStore.write_empty_workflow
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~JSONPersistentStore.EAR_cache
      ~JSONPersistentStore.element_cache
      ~JSONPersistentStore.element_iter_cache
      ~JSONPersistentStore.has_pending
      ~JSONPersistentStore.is_submittable
      ~JSONPersistentStore.logger
      ~JSONPersistentStore.num_EARs_cache
      ~JSONPersistentStore.num_tasks_cache
      ~JSONPersistentStore.param_sources_cache
      ~JSONPersistentStore.parameter_cache
      ~JSONPersistentStore.task_cache
      ~JSONPersistentStore.ts_fmt
      ~JSONPersistentStore.use_cache
   
   